crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__run_dependencies_in_feature.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        channels = []\n        platforms = []\n\n        [feature.foobar.run-dependencies]\n        \"#,)"
---
  × Unexpected keys, expected only 'platforms', 'channels', 'channel-priority', 'solve-strategy', 'target', 'dependencies', 'host-dependencies', 'build-dependencies', 'constraints', 'pypi-
  │ dependencies', 'dev', 'activation', 'tasks', 'pypi-options', 'system-requirements'
   ╭─[pixi.toml:6:25]
 5 │
 6 │         [feature.foobar.run-dependencies]
   ·                         ────────┬───────
   ·                                 ╰── 'run-dependencies' was not expected here
 7 │
   ╰────
  help: Did you mean 'build-dependencies'?
