crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__run_dependencies_without_pixi_build.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        channels = []\n        platforms = []\n\n        [run-dependencies]\n        \"#,)"
---
  × [run-dependencies] are only available when using the `pixi-build` preview flag.
   ╭─[pixi.toml:6:9]
 5 │
 6 │         [run-dependencies]
   ·         ───────────────────
 7 │
   ╰────
  help: Run `pixi workspace preview add pixi-build` to enable the preview flag
