crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__schema_must_be_string.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        schema = false\n\n        [workspace]\n        channels = []\n        platforms = []\n        \"#,)"
---
  × Unexpected keys, expected only 'workspace', 'package', 'target', 'dependencies', 'host-dependencies', 'build-dependencies', 'pypi-dependencies', 'activation', 'tasks', 'feature', 'environments',
  │ 'pypi-options', 'system-requirements'
   ╭─[pixi.toml:2:9]
 1 │ 
 2 │         schema = false
   ·         ───┬──
   ·            ╰── 'schema' was not expected here
 3 │ 
   ╰────
