crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__system_requirements_deprecation_warning_lists_all_requirements.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
assertion_line: 2737
expression: "expect_parse_warnings(r#\"\n        [workspace]\n        name = \"test\"\n        channels = []\n        platforms = ['osx-arm64', 'linux-64']\n\n        [system-requirements]\n        cuda = \"12.9\"\n        macos = \"13.0\"\n        libc = { family = \"glibc\", version = \"2.28\" }\n        archspec = \"x86_64_v3\"\n        \"#,)"
---
  ⚠ the `[system-requirements]` table is deprecated in favor of virtual packages on `platforms`
    ╭─[pixi.toml:7:9]
  6 │
  7 │ ╭─▶         [system-requirements]
  8 │ │           cuda = "12.9"
  9 │ │           macos = "13.0"
 10 │ │           libc = { family = "glibc", version = "2.28" }
 11 │ ├─▶         archspec = "x86_64_v3"
    · ╰──── declare these on the `platforms` entries instead
 12 │
    ╰────
  help: e.g. platforms = [{ name = "my-osx-arm64", platform = "osx-arm64", macos = "13.0" }, { name = "my-linux-64", platform = "linux-64", cuda = "12.9", glibc = "2.28" }]
