crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__tool_parsing.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: parsed.tool
---
Some(
    PixiSpanned {
        span: None,
        value: {
            "foobar": Object {
                "configuration": String("blabla"),
            },
        },
    },
)
